--- a/index.html
+++ b/index.html
@@ -1,10 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Back Here</title>
+    <link rel="stylesheet" href="old-styling.css" />
   </head>
 
   <header>
-    <p1> how fun </p1>
+    <div class="logo-box">
+      <img
+        src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2Fthanks%20bungo.png?v=1637166005474"
+        alt="Logo image"
+      />
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="account.html">Make an Account</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="site-plan.html">Site Plan</a></li>
+        <li><a href="forms.html">Forms</a></li>
+      </ul>
+    </nav>
   </header>
+
+  <body>
+    <div class="home-grid">
+      <div class="home-image-1">
+        <img
+          src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2FUntitled.png?v=1637172243249"
+          alt="blue sphere"
+        />
+      </div>
+      <section class="block1">
+        <h1>
+          Do you wish there was a place you could go to talk to everyone you
+          know?
+        </h1>
+        <p>
+          If you've ever used the internet to talk to someone, you've probably
+          run into the issue of not having a common platform to talk to on. Sign
+          up to Lithim, and get connected together, today!
+        </p>
+      </section>
+    </div>
+
+    <div class="home-grid-2">
+      <div class="home-image-2">
+        <img
+          src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2Fsocial_network_Mirko_AdobeStock_210441004.jpeg?v=1637172051903"
+          alt="circle of phones"
+        />
+      </div>
+      <section class="block2">
+        <h1>Now available on Android, Windows, and the Apple ecosystem!</h1>
+        <p>
+          Free for everyone, Lithim is available on Android, Windows, and the
+          Apple ecosystem. Simply pick the apps you use most, and Lithim will do
+          the rest. No further work required for you, or the person you're
+          talking to.
+        </p>
+      </section>
+    </div>
+
+    <footer>
+      <p>
+        Liam Harris | This is a mock website for a student project, please don't
+        sue me | <a href="site-plan.html">Site Plan</a> |
+      </p>
+    </footer>
+  </body>
 </html>
