Updated to cards

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Back Here</title>
+    <title>Made with Glitch</title>
     <link rel="stylesheet" href="old-styling.css" />
   </head>
 
@@ -26,41 +26,28 @@
   </header>
 
   <body>
-    <div class="home-grid">
-      <div class="home-image-1">
+    <div class="contact-grid">
+      <div class="account-image-1">
         <img
-          src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2FUntitled.png?v=1637172243249"
-          alt="blue sphere"
+          src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2Fred-envelope-md-min.png?v=1638672431993"
+          alt="red letter"
         />
-      </div>
-      <section class="block1">
-        <h1>
-          Do you wish there was a place you could go to talk to everyone you
-          know?
-        </h1>
-        <p>
-          If you've ever used the internet to talk to someone, you've probably
-          run into the issue of not having a common platform to talk to on. Sign
-          up to Lithim, and get connected together, today!
-        </p>
-      </section>
-    </div>
 
-    <div class="home-grid-2">
-      <div class="home-image-2">
         <img
-          src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2Fsocial_network_Mirko_AdobeStock_210441004.jpeg?v=1637172051903"
-          alt="circle of phones"
+          src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2F188136-middle-min%20(2).png?v=1638675283883"
+          alt="red phone"
         />
       </div>
-      <section class="block2">
-        <h1>Now available on Android, Windows, and the Apple ecosystem!</h1>
-        <p>
-          Free for everyone, Lithim is available on Android, Windows, and the
-          Apple ecosystem. Simply pick the apps you use most, and Lithim will do
-          the rest. No further work required for you, or the person you're
-          talking to.
-        </p>
+
+      <section class="contact-container">
+        <h1>Contact Us!</h1>
+        <p>Email: lithimbusiness@gmail.com</p>
+
+        <p>Phone number: 723-555-2395</p>
+
+        <p>Our business hours are 9-5 on weekdays.</p>
+
+        <p>Address: 543 Donkey Lane</p>
       </section>
     </div>
 
