prettying it up

--- a/index.html
+++ b/index.html
@@ -9,53 +9,32 @@
 
   <header>
     <div class="logo-box">
-      <img
-        src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2Fthanks%20bungo.png?v=1637166005474"
-        alt="Logo image"
-      />
+      <img src="https://i.imgur.com/2rMKS1R.jpg" alt="an image of me" />
     </div>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="account.html">Make an Account</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="site-plan.html">Site Plan</a></li>
-        <li><a href="forms.html">Forms</a></li>
+        L. Harris
       </ul>
     </nav>
   </header>
 
   <body>
     <div class="contact-grid">
-      <div class="account-image-1">
-        <img
-          src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2Fred-envelope-md-min.png?v=1638672431993"
-          alt="red letter"
-        />
-
-        <img
-          src="https://cdn.glitch.me/a5968cb6-7a28-4e9b-8df3-27e73e0563a9%2F188136-middle-min%20(2).png?v=1638675283883"
-          alt="red phone"
-        />
-      </div>
-
       <section class="contact-container">
-        <h1>Contact Us!</h1>
-        <p>Email: lithimbusiness@gmail.com</p>
+        <h1>WDD 230: Assignment Portal</h1>
 
-        <p>Phone number: 723-555-2395</p>
-
-        <p>Our business hours are 9-5 on weekdays.</p>
-
-        <p>Address: 543 Donkey Lane</p>
+        <ul>
+          <li>Lesson 2 <a href="dummy.html">Title</a></li>
+          <li>Lesson 3 <a href="dummy.html">Title</a></li>
+          <li>Lesson 4 <a href="dummy.html">Title</a></li>
+          <li>Lesson 5 <a href="dummy.html">Title</a></li>
+          <li>Lesson 6 <a href="dummy.html">Title</a></li>
+        </ul>
       </section>
     </div>
 
     <footer>
-      <p>
-        Liam Harris | This is a mock website for a student project, please don't
-        sue me | <a href="site-plan.html">Site Plan</a> |
-      </p>
+      <p>2022 | L. Harris | Oklahoma |</p>
     </footer>
   </body>
 </html>
