--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Made with Glitch</title>
+    <title>memento mori</title>
     <link rel="stylesheet" href="old-styling.css" />
   </head>
 
