--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <div class="logo-box">
       <img src="https://i.imgur.com/2rMKS1R.jpg" alt="an image of me" />
     </div>
-    <nav>
-      <ul>
-        L. Harris
-      </ul>
-    </nav>
+    <p>L. Harris</p>
   </header>
 
   <body>
