Added image, and medium.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <header>
     <div class="logo-box">
-      <img src="https://i.imgur.com/2rMKS1R.jpg" alt="an image of me" />
+      <img src="images/face.jpg" alt="an image of me" />
     </div>
     <p>L. Harris</p>
   </header>
