I'm honestly not sure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>memento mori</title>
     <link rel="stylesheet" href="css/old-styling.css" />
+    <link rel="stylesheet" href="css/medium.css" />
   </head>
 
   <header>
@@ -28,7 +29,7 @@
         </ul>
       </section>
     </div>
-
+    <p>cmon</p>
     <footer>
       <p>2022 | L. Harris | Oklahoma |</p>
     </footer>
