you don't welcome me

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <ul>
           <li>Lesson 2 <a href="dummy.html">Title</a></li>
-          <li>Lesson 3 <a href="dummy.html">Title</a></li>
+          <li>Lesson 3 <a href="lesson3/index.html">Lesson 3</a></li>
           <li>Lesson 4 <a href="dummy.html">Title</a></li>
           <li>Lesson 5 <a href="dummy.html">Title</a></li>
           <li>Lesson 6 <a href="dummy.html">Title</a></li>
