--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -12,12 +12,27 @@
       <h2>L. Harris</h2>
     </header>
     <main>
-      <h3>Website URL</h3>
+      <hr />
+      <h2>Website URL</h2>
       <h3><a href="https://santiagococ.org">santiagococ.org</a></h3>
 
-      <h3>Audience</h3>
-      <p></p>
-      <!-- change this -->
+      <h2>Purpose</h2>
+      <p>
+        The Santiago Chamber of Commerce website is intended to be the place new
+        and existing members go to be informed about the buisiness development
+        happening to champion Santiago in buisiness. We will provide event
+        calendars, physical meeting times, and online sign ups.
+      </p>
+
+      <h2>Audience</h2>
+      <p>
+        The audience of our website are small and large buisiness owners in
+        Santiago. The typical small buisiness owner are usually in their mid
+        20's to late 60's, usually with typical income. Most would access on
+        smaller devices. The usual large buisiness owner is in their late 40's
+        to late 60's, with a higher income. This part of our audience would
+        access on a larger device, such as a desktop.
+      </p>
 
       <h2>Branding</h2>
       <h3>Website Logo</h3>
@@ -25,12 +40,8 @@
       <hr />
       <h2>Style Guide</h2>
 
-      <!-- ------------------------Steps 4-8------------------------------ -->
+      <h3>Color Scheme</h3>
 
-      <h3>Color Palette</h3>
-      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
-
-      <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
       <p>
         Palette URL:
         <a
@@ -42,133 +53,40 @@
 
       <table class="colors">
         <tr>
-          <th>Primary</th>
-          <th>Secondary</th>
-          <th>Accent 1</th>
-          <th>Accent 2</th>
-        </tr>
-        <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr>
-          <td class="primary">[#d4d4d4]</td>
-          <td class="secondary">[#305298]</td>
-          <td class="accent1">[#373E40]</td>
-          <td class="accent2"></td>
+          <td class="primary">[#c9c9c9]</td>
+          <td class="secondary">[#1c97fc]</td>
+          <td class="accent1">[#3f48cc]</td>
+          <td class="accent2">[#7f2be6]</td>
         </tr>
       </table>
 
-      <!-- ------------------------Step 9------------------------------ -->
-
       <h3>Typography</h3>
-      <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
-      <h4>Heading Font: Libre Baskerville<!-- change this --></h4>
+      <h4>Heading Font: Roboto</h4>
       <p>
-        Reminiscent of national park signs, this font gives a sense of nature.
-        While a bit much for paragraph text, it's placed well as a highlight,
-        being in a heading.
-        <!-- change this -->
+        A sleek, modern, readable font without serif. I never understood why
+        people liked those ugly lines.
       </p>
 
-      <h4>
-        Paragraph Font: Verdana
-        <!-- change this -->
-      </h4>
+      <h4>Paragraph Font: Lato</h4>
       <p>
         Clearly legible, and unobtrusive to the eye. It works well on small font
         sizes, and as most people browse the internet on their phone, this will
         assist in that end even more.
-        <!-- change this -->
       </p>
 
       <h4>Normal paragraph example</h4>
       <p>
-        The best Whitewater Rafting in Colorado, White Water Rafting Company
-        offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-        Springs. Since 1974, we have been family owned and operated, rafting the
-        Shoshone section of Glenwood Canyon and beyond.
-      </p>
-      <h4>Colored paragraph example</h4>
-      <p class="colored">
-        Trips vary from mild and great for families, to trips exclusively for
-        physically fit and experienced rafters. No matter what type of river
-        adventures you are seeking, White Water Rafting Company can make it
-        happen for you.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
       </p>
 
-      <!-- ------------------------Step 10------------------------------ -->
-
-      <h3>Navigation</h3>
-      <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Contact Us!</a></li>
-          <li><a href="#">Our Packages</a></li>
-        </ul>
-      </nav>
       <hr />
-      <h2>Site Map</h2>
-      <div class="sitemap">
-        <div class="sm-home">Home</div>
-        <div class="sm-page2">Contact Us!<!-- change this --></div>
-        <div class="sm-page3">
-          Our Packages
-          <!-- change this -->
-        </div>
-
-        <div class="top">&nbsp;</div>
-        <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
-      </div>
-      <p>
-        The Site Map of a site is just like it sounds…it is a map of the pages
-        in a site and how they are related and linked together. From the map
-        above we can see that we will eventually have the Home page and 2 sub or
-        child pages.
-      </p>
-      <p>
-        The lines that connect them all together indicate that each page should
-        be accessible from any other page, it is essentially showing us the
-        global navigation for the site.
-      </p>
-      <!--
-Choose your pages that you will create and put the names inside the two child page boxes… Some suggestions are below:
-
-•	FAQ
-•	Blog
-•	Contact Us
-•	Rivers We Run
-•	Schedule/Rates/Dates -->
-      <hr />
-      <h2>Wireframes</h2>
-      <p>
-        Wireframes are like blueprints for making webpages. They should show the
-        major sections of content that will be on the page and the relative
-        locations of each element. In the wireframe below you can see there will
-        be 6 sections to our page:
-      </p>
-      <ol>
-        <li>
-          At the top we have a section with the logo (the box with the mountain
-          means an image) and the navigation bar.
-        </li>
-        <li>
-          Then there is a banner image that stretches all the way across the
-          screen.
-        </li>
-        <li>Next we have some text and an image</li>
-        <li>...followed by another row made up of an image and some text.</li>
-        <li>Then one more section of text with no image.</li>
-        <li>
-          Lastly, a footer containing a copyright/name line and 3 social media
-          icons.
-        </li>
-      </ol>
-
-      <img
-        src="https://byui-cit.github.io/wdd100/images/wireframe-grid.png"
-        alt="home page wireframe"
-      />
     </main>
   </body>
 </html>
