--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,7 +16,7 @@
         <h2>Chamber of Commerce</h2>
       </div>
       <nav>
-        <p>struggle</p>
+        <p>struggling</p>
       </nav>
     </header>
 
@@ -31,6 +31,11 @@
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <hr />
+      <p>
+        2022 Santiago Chamber | L. Harris | WDD 230 Project | Last Modified:
+      </p>
+    </footer>
   </body>
 </html>
