--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,12 +24,18 @@
 
     <main>
       <div class="mainContent">
-        <section class="mainSelection" id="sec1">Sec One</section>
-        <section class="mainSelection" id="sec2">Sec Two</section>
-        <section class="mainSelection" id="sec3">Sec Three</section>
-        <section class="mainSelection" id="sec4">Sec Four</section>
-        <section class="mainSelection" id="sec5">Sec Five</section>
-        <section class="mainSelection" id="sec6">Sec Six</section>
+        <section class="mainSelection" id="sec1">Hero Site Name</section>
+        <section class="mainSelection" id="sec2">Event</section>
+        <section class="mainSelection" id="sec3">Weather</section>
+        <section class="mainSelection" id="sec4">News Release</section>
+        <section class="mainSelection" id="sec5">
+          <div class="spotlight">
+            <p>Spotlight 1</p>
+            <p>Spotlight 2</p>
+            <p id="spotlight3">Spotlight 3</p>
+          </div>
+        </section>
+        <section class="mainSelection" id="sec6">Join</section>
       </div>
     </main>
 
