Prettying it up

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,10 +24,22 @@
 
     <main>
       <div class="mainContent">
-        <section class="mainSelection" id="sec1">Hero Site Name</section>
-        <section class="mainSelection" id="sec2">Event</section>
-        <section class="mainSelection" id="sec3">Weather</section>
-        <section class="mainSelection" id="sec4">News Release</section>
+        <section class="mainSelection" id="sec1">
+          <h1>Welcome to the Santiago Chamber of Commerce!</h1>
+        </section>
+
+        <section class="mainSelection" id="sec2">
+          <h2>Event</h2>
+        </section>
+
+        <section class="mainSelection" id="sec3">
+          <h2>Weather</h2>
+        </section>
+
+        <section class="mainSelection" id="sec4">
+          <h2>News Release</h2>
+        </section>
+
         <section class="mainSelection" id="sec5">
           <div class="spotlight">
             <p>Spotlight 1</p>
@@ -35,7 +47,9 @@
             <p id="spotlight3">Spotlight 3</p>
           </div>
         </section>
-        <section class="mainSelection" id="sec6">Join</section>
+        <section class="mainSelection" id="sec6">
+          <h2>Join Us Today!</h2>
+        </section>
       </div>
     </main>
 
