--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,17 +38,30 @@
 
         <section class="mainSelection" id="sec4">
           <h2>News Release</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
         </section>
 
         <section class="mainSelection" id="sec5">
           <div class="spotlight">
-            <p>Spotlight 1</p>
-            <p>Spotlight 2</p>
-            <p id="spotlight3">Spotlight 3</p>
+            <h3>Spotlight 1</h3>
+            <h3>Spotlight 2</h3>
+            <h3 id="spotlight3">Spotlight 3</h3>
           </div>
         </section>
         <section class="mainSelection" id="sec6">
           <h2>Join Us Today!</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
         </section>
       </div>
     </main>
