--- a/chamber/index.html
+++ b/chamber/index.html
@@ -57,7 +57,8 @@
           </div>
         </section>
         <section class="mainSelection" id="sec6">
-          <h2>Join Us Today!</h2>
+          <h2><a href="/lesson8/join.html">Join Us Today!</a></h2>
+
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
