--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           <li>Lesson 4 <a href="chamber/index.html">Lesson 4</a></li>
           <li>Lesson 5 <a href="dummy.html">Title</a></li>
           <li>Lesson 6 <a href="dummy.html">Title</a></li>
+          <li>Lesson 7 <a href="dummy.html">Title</a></li>
+          <li>Lesson 8 <a href="/lesson8/join.html">Title</a></li>
         </ul>
       </section>
     </div>
