--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <li>Lesson 6 <a href="dummy.html">Title</a></li>
           <li>Lesson 7 <a href="dummy.html">Title</a></li>
           <li>Lesson 8 <a href="/lesson8/join.html">Title</a></li>
+          <li>Lesson 8 <a href="/lesson9/directory.html">Title</a></li>
         </ul>
       </section>
     </div>
