--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,6 +34,16 @@
 
         <section class="mainSelection" id="sec3">
           <h2>Weather</h2>
+          <h1>OpenWeatherMap.org API Test</h1>
+          <p>
+            The current temperature in Santiago, Chile is
+            <span id="current-temp"></span> &deg;F
+          </p>
+          <h2>Current Condition Icon</h2>
+          <figure>
+            <img src="" alt="" id="weather-icon" />
+            <figcaption></figcaption>
+          </figure>
         </section>
 
         <section class="mainSelection" id="sec4">
@@ -73,5 +83,6 @@
         2022 Santiago Chamber | L. Harris | WDD 230 Project | Last Modified:
       </p>
     </footer>
+    <script src="scripts/weather.js"></script>
   </body>
 </html>
