--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <li>Lesson 6 <a href="dummy.html">Title</a></li>
           <li>Lesson 7 <a href="dummy.html">Title</a></li>
           <li>Lesson 8 <a href="/lesson8/join.html">Title</a></li>
-          <li>Lesson 8 <a href="/lesson9/directory.html">Title</a></li>
+          <li>Lesson 9 <a href="/lesson9/directory.html">Title</a></li>
+          <li>Lesson 10 <a href="/lesson10/weather.html">Title</a></li>
         </ul>
       </section>
     </div>
