--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,14 +34,15 @@
 
         <section class="mainSelection" id="sec3">
           <h2>Weather</h2>
-          <h1>OpenWeatherMap.org API Test</h1>
-          <p>
-            The current temperature in Santiago, Chile is
-            <span id="current-temp"></span> &deg;F
-          </p>
-          <h2>Current Condition Icon</h2>
+
+          <div>
+            <p>
+              <span><img src="" alt="" id="weather-icon" /></span>
+              <span id="current-temp"></span> &deg;F
+            </p>
+          </div>
+          <hr />
           <figure>
-            <img src="" alt="" id="weather-icon" />
             <figcaption></figcaption>
           </figure>
         </section>
