Whoops, didn't update the github

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,9 +42,10 @@
             </p>
           </div>
           <hr />
-          <figure>
-            <figcaption></figcaption>
-          </figure>
+
+          <figcaption></figcaption>
+
+          <span id="windchill"></span>
         </section>
 
         <section class="mainSelection" id="sec4">
