more finishing touches

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <li>Lesson 5 <a href="lesson5/bom.html">Title</a></li>
           <li>Lesson 6 <a href="dummy.html">Title</a></li>
           <li>Lesson 7 <a href="dummy.html">Title</a></li>
-          <li>Lesson 8 <a href="/lesson8/join.html">Title</a></li>
-          <li>Lesson 9 <a href="/lesson9/directory.html">Title</a></li>
-          <li>Lesson 10 <a href="/lesson10/weather.html">Title</a></li>
+          <li>Lesson 8 <a href="lesson8/join.html">Title</a></li>
+          <li>Lesson 9 <a href="lesson9/directory.html">Title</a></li>
+          <li>Lesson 10 <a href="lesson10/weather.html">Title</a></li>
         </ul>
       </section>
     </div>
