--- a/chamber/index.html
+++ b/chamber/index.html
@@ -69,7 +69,11 @@
           </div>
         </section>
         <section class="mainSelection" id="sec6">
-          <h2><a href="/lesson8/join.html">Join Us Today!</a></h2>
+          <h2>
+            <a href="https://iamlharris.github.io/wdd230-2/lesson8/join.html"
+              >Join Us Today!</a
+            >
+          </h2>
 
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
