--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/medium.css" />
     <link rel="stylesheet" href="styles/large.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
   </head>
 
   <body>
@@ -62,11 +63,7 @@
         </section>
 
         <section class="mainSelection" id="sec5">
-          <div class="spotlight">
-            <h3>Spotlight 1</h3>
-            <h3>Spotlight 2</h3>
-            <h3 id="spotlight3">Spotlight 3</h3>
-          </div>
+          <div class="spotlight"></div>
         </section>
         <section class="mainSelection" id="sec6">
           <h2>
@@ -90,5 +87,6 @@
       </p>
     </footer>
     <script src="scripts/weather.js"></script>
+    <script src="scripts/cards.js"></script>
   </body>
 </html>
