--- a/bountifulFoods/index.html
+++ b/bountifulFoods/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Bountiful Foods</title>
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/medium.css" />
+    <link rel="stylesheet" href="styles/large.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
+
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico" />
   </head>
+
   <body>
+    <header>
+      <img src="images/bountifullogo.png" />
+      <h1>Bountiful Foods</h1>
+      <a href="/bountifulFoods/fresh.html">Fresh Page</a>
+      <a href="/bountifulFoods/aboutUs.html">About Us Page</a>
+      Social media links (at least three) (no account necessary).
+    </header>
+    <main>
+      <p>hey there</p>
+
+      <a href="/bountifulFoods/fresh.html">Fresh Page</a>
+      <a href="/bountifulFoods/aboutUs.html">About Us Page</a>
+
+      <div class="mainSelections">
+        <section id="sec1">
+          Summary information about any coastal area or areas in the southern
+          California coast of your choosing.
+        </section>
+        <section id="sec2">
+          A call to action to make your own fruit drink mix. This link can link
+          to the Fresh page.
+        </section>
+        <section id="sec3">
+          The weather card(s) must summarize the current weather conditions for
+          Carlsbad. Use the openweathermap APIs (weather, forecast/daily) and
+          include the temperature, the condition description, the humidity, and
+          a three (3) day temperature forecast.
+        </section>
+        <section id="sec4">
+          Include an information card about the total number of specialty drinks
+          that the current user has submitted from the Fresh page form. This
+          information should just be stored locally, with the user's agent
+          (browser).
+        </section>
+      </div>
+    </main>
+
+    <footer><h5>Buisiness yadda yadda</h5></footer>
     <script src="index.js"></script>
   </body>
 </html>
