Looking better and better

--- a/bountifulFoods/aboutUs.html
+++ b/bountifulFoods/aboutUs.html
@@ -15,12 +15,29 @@
 
   <body>
     <header>
-      <img src="images/bountifullogo.png" />
-      <h1>Bountiful Foods</h1>
-      <a href="/bountifulFoods/index.html">Index Page</a>
-      <a href="/bountifulFoods/fresh.html">Fresh Page</a>
-      <a href="/bountifulFoods/aboutUs.html">About Us Page</a>
-      Social media links (at least three) (no account necessary).
+      <div class="headerWrapper">
+        <div class="bountifulLogo">
+          <a href="/bountifulFoods/index.html"
+            ><img src="images/bountifullogo.png" alt="Boutiful Foods Logo"
+          /></a>
+          <a href="/bountifulFoods/index.html"><h1>Bountiful Foods</h1></a>
+        </div>
+        <a href="/bountifulFoods/fresh.html">Fresh Page</a>
+        <a href="/bountifulFoods/aboutUs.html">About Us Page</a>
+
+        <div class="socialMedia">
+          <a
+            href="https://en.wikipedia.org/wiki/Google%2B#Shutdown_of_consumer_version"
+            ><img src="images/logos/googleplus.png" alt="Google+ Logo" />
+          </a>
+          <a href="https://twitter.com/"
+            ><img src="images/logos/twitter.png" alt="Twitter Logo" />
+          </a>
+          <a href="https://www.pinterest.com/"
+            ><img src="images/logos/pinterest.png" alt="Google+ Logo" />
+          </a>
+        </div>
+      </div>
     </header>
     <main>
       <p>
